infra/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testrails-prod
  labels:
    environment: production
    project: testrails
